<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kryx07.moneyleft.InputActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/money_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/money_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/money_left_prompt"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <!-- <TextView
         android:id="@+id/text_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/money_input_layout" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/money_input_layout"
        android:layout_margin="@dimen/margin_standard"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/today_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_item_adapter"
                tools:text="dupa" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paycheck"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/paycheck_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_item_adapter"
                tools:text="dupa" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_left"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/days_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_item_adapter"
                tools:text="dupa" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_left"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/money_left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_item_adapter"
                tools:text="dupa" />
        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Money per day:"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/money_per_day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_item_adapter"
                tools:text="dupa" />
        </LinearLayout>

    </LinearLayout>

    <!--<TextView
        android:id="@+id/view_partitioner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dupa" />-->
    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></LinearLayout>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/red"
            android:text="@string/button_cancel_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/blue"
            android:text="@string/button_accept_text"
            android:textColor="@color/white" />-->
</RelativeLayout>
